# QC-RNG

./: .gitignore  CMakeLists.txt  GNUmakefile  QCRNG.cc  README.md
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  OutputManager.hh  PrimaryGeneratorAction.hh  QCRNGConfig.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: init_vis.mac  run1.mac  run22Na.mac  runannihil.mac  runbeta.mac  rungamma.mac  vis.mac
scripts/: analyze.C  analyze.py
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  OutputManager.cc  PrimaryGeneratorAction.cc  QCRNGConfig.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
